2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* RangeBase.cs: Added validation for infinite values.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* RangeBase.cs: Added.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Thumb.cs: Fixed some using statements.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Thumb.cs: Fixed DragDelta raising.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Thumb.cs: Fixed default value of Focusable.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Thumb.cs: Fixed DragDelta raising.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonBase.cs: Added a FIXME.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Thumb.cs: Added.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* RepeatButton.cs: Removed a TODO comment.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* RepeatButton.cs: Added command execution when it is part of a template.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Track.cs: Fixed a comment.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Track.cs: Fixed regression introduced by previous change.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Track.cs: Fixed thumb arrangement when the Track is very small.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Track.cs: Fixed thumb sizing.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Track.cs: Fixed things broken by the last change.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Track.cs: Duplicated very strange Microsoft behavior.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollBar.cs, Track.cs: Duplicated very strange Microsoft behavior.

2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* Track.cs: Switched to implemented RepeatButton.

2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* RepeatButton.cs, ScrollBar.cs: Let WPF load theme styles automatically.