@@ -1,5 +1,9 @@
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* RangeBase.cs: Added Value adjusting.
+
+2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* RangeBase.cs: Added validation for infinite values.
 
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
